# decode-imap-dirs

./: decode-imap-dirs.cabal  list-imap-folders.cabal  stack.yaml
app/: Main.hs
src/Sgf/Data/: Fold.hs
src/Sgf/Text/: IMAPUtf7.hs
