name:                decode-imap-dirs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sgf-dma/decode-imap-dirs
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sgf.Data.Fold
                       Sgf.Text.IMAPUtf7
  build-depends:       base
                       , bytestring
                       , text
                       , text-utf7
  default-language:    Haskell2010

executable decode-imap-dirs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                       , bytestring
                       , split
                       , text
                       , text-utf7
                       , decode-imap-dirs
  default-language:    Haskell2010
  if flag(TestSgfSplit)
    cpp-options:       -DTestSgfSplit

test-suite decode-imap-dirs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , decode-imap-dirs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

Flag TestSgfSplit
  Description:         Decode using split from 'Sgf.Text'IMAPUtf7' and compare
                       results.
  Default:             True

source-repository head
  type:     git
  location: https://github.com/sgf-dma/decode-imap-dirs
